# DCO_benchmarks_RaBitQ

./: .gitignore  CMakeLists.txt  README.md  clear.sh  example.sh  example2.sh  exampleforparam.sh  exmapleforindex.sh
docs/: mkdocs.yml
docs/docs/: compact_code.md  index.md  kernel_ip.md  quick_start.md
docs/docs/index/: hnsw.md  ivf.md  qg.md
docs/docs/rabitq/: estimator.md  quantizer.md  rabitq.md  reranking.md  rotator.md
python/: ivf.py
python/utils/: io.py
rabitqlib/fastscan/: fastscan.hpp  highacc_fastscan.hpp
rabitqlib/index/: estimator.hpp  lut.hpp  query.hpp
rabitqlib/index/ivf/: ivf.hpp
rabitqlib/quantization/: rabitq_impl.hpp
rabitqlib/utils/: rotator.hpp  space.hpp  warmup_space.hpp
result/sift-128-euclidean/: sift-128-euclidean_ad_hnsw_perf_result.txt  sift-128-euclidean_ad_ivf_perf_result.txt
sample/: CMakeLists.txt  hnsw_rabitq_indexing.cpp  hnsw_rabitq_querying.cpp  ivf_rabitq_indexing.cpp  ivf_rabitq_querying.cpp  quantizer.cpp  symqg_indexing.cpp  symqg_querying.cpp
